refactor: nextCursor 설정 로직과 toList 개선